SEM2/COD7001/LABS/LAB6/cstn6/src/automated_tests/stress_tests/valid/test_21.lang
var a = 89;
var b = 58;
var c = a + b * 2;